--- a/style/style-login.css
+++ b/style/style-login.css
@@ -263,3 +263,32 @@ ul a{
         width: 90%;
     }
 }    
+
+@media only screen and (max-width: 440px){
+
+    .title{
+        font-size: .9em;
+    }
+    .contenedor-form{
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 368px){
+    .title{
+        font-size: 1em;
+    }
+    .title-span{
+        font-size: 1.2em;
+        font-weight: 900;
+    }
+    .contenedor-form{
+        width: 100%;
+    }
+}        
+
+@media only screen and (max-width: 320px){
+ .contenedor-form{
+     width: 100%;
+ }
+}
